fix z-index in bottom bar

--- a/src/app/page-small-nav/page-small-nav.component.scss
+++ b/src/app/page-small-nav/page-small-nav.component.scss
@@ -4,6 +4,7 @@
 }
 .mobile-filter-button {
     position: fixed;
+    z-index: 11;
     bottom: 75px !important;
     outline: none;
     color: var(--background);
